--- a/GameEngineArchitecture/GameEngineArchitecture.vcxproj
+++ b/GameEngineArchitecture/GameEngineArchitecture.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="external\include\ImGui\imgui.h" />
+    <ClInclude Include="external\include\ImGui\imgui_impl_glfw.h" />
     <ClInclude Include="include\AttackComponent.h" />
     <ClInclude Include="include\CameraComponent.h" />
     <ClInclude Include="include\CameraViewState.h" />
@@ -32,10 +34,6 @@
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\CommandArgumentTypes.h" />
     <ClInclude Include="include\HealthComponent.h" />
-    <ClInclude Include="include\imgui.h" />
-    <ClInclude Include="include\ImGuiLevelEditor.h" />
-    <ClInclude Include="include\imgui_impl_glfw.h" />
-    <ClInclude Include="include\imgui_impl_opengl3.h" />
     <ClInclude Include="include\InputCommands.h" />
     <ClInclude Include="include\GameObject.h" />
     <ClInclude Include="include\GLFW_EngineCore.h" />
@@ -60,12 +58,10 @@
     <ClCompile Include="source\GLAD\glad.c" />
     <ClCompile Include="source\GLFW_EngineCore.cpp" />
     <ClCompile Include="source\imgui.cpp" />
-    <ClCompile Include="source\ImGuiLevelEditor.cpp" />
     <ClCompile Include="source\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="source\imgui_demo.cpp" />
     <ClCompile Include="source\imgui_draw.cpp" />
     <ClCompile Include="source\imgui_impl_glfw.cpp" />
-    <ClCompile Include="source\imgui_impl_opengl3.cpp" />
     <ClCompile Include="source\imgui_impl_win32.cpp" />
     <ClCompile Include="source\InputHandler.cpp" />
     <ClCompile Include="source\JSON\jsoncpp.cpp" />
