Added a basic debug drawer for the rendering of the AABBs, implemented the primitives class which handles the rendering of basic primitve objects such as cubes, quads and Spheres just for potential use/debug models

--- a/GameEngineArchitecture/GameEngineArchitecture.vcxproj.filters
+++ b/GameEngineArchitecture/GameEngineArchitecture.vcxproj.filters
@@ -240,6 +240,9 @@
     <ClInclude Include="include\ModelManager.h">
       <Filter>Header Files\RenderEngine</Filter>
     </ClInclude>
+    <ClInclude Include="include\Primitives.h">
+      <Filter>Header Files\RenderEngine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\GLFW_EngineCore.cpp">
@@ -352,6 +355,9 @@
     </ClCompile>
     <ClCompile Include="source\PhysicsObject.cpp">
       <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Primitives.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
